// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSkipLink is rendered 1`] = `
<a
  aria-label="aria-label"
  class="ouiButton ouiButton--primary ouiButton--small ouiButton--fill ouiScreenReaderOnly--showOnFocus ouiSkipLink ouiSkipLink--static testClass1 testClass2"
  data-test-subj="test subject string"
  href="#somewhere"
  rel="noreferrer"
>
  <span
    class="ouiButtonContent ouiButton__content"
  >
    <span
      class="ouiButton__text"
    >
      Skip
    </span>
  </span>
</a>
`;

exports[`OuiSkipLink props onClick is rendered 1`] = `
<a
  class="ouiButton ouiButton--primary ouiButton--small ouiButton--fill ouiScreenReaderOnly--showOnFocus ouiSkipLink ouiSkipLink--static"
  href="#somewhere"
  rel="noreferrer"
>
  <span
    class="ouiButtonContent ouiButton__content"
  >
    <span
      class="ouiButton__text"
    />
  </span>
</a>
`;

exports[`OuiSkipLink props position absolute is rendered 1`] = `
<a
  class="ouiButton ouiButton--primary ouiButton--small ouiButton--fill ouiScreenReaderOnly--showOnFocus ouiSkipLink ouiSkipLink--absolute"
  href="#somewhere"
  rel="noreferrer"
>
  <span
    class="ouiButtonContent ouiButton__content"
  >
    <span
      class="ouiButton__text"
    />
  </span>
</a>
`;

exports[`OuiSkipLink props position fixed is rendered 1`] = `
<a
  class="ouiButton ouiButton--primary ouiButton--small ouiButton--fill ouiScreenReaderOnly--showOnFocus ouiSkipLink ouiSkipLink--fixed"
  href="#somewhere"
  rel="noreferrer"
  tabindex="0"
>
  <span
    class="ouiButtonContent ouiButton__content"
  >
    <span
      class="ouiButton__text"
    />
  </span>
</a>
`;

exports[`OuiSkipLink props position static is rendered 1`] = `
<a
  class="ouiButton ouiButton--primary ouiButton--small ouiButton--fill ouiScreenReaderOnly--showOnFocus ouiSkipLink ouiSkipLink--static"
  href="#somewhere"
  rel="noreferrer"
>
  <span
    class="ouiButtonContent ouiButton__content"
  >
    <span
      class="ouiButton__text"
    />
  </span>
</a>
`;

exports[`OuiSkipLink props tabIndex is rendered 1`] = `
<a
  class="ouiButton ouiButton--primary ouiButton--small ouiButton--fill ouiScreenReaderOnly--showOnFocus ouiSkipLink ouiSkipLink--static"
  href="#somewhere"
  rel="noreferrer"
  tabindex="-1"
>
  <span
    class="ouiButtonContent ouiButton__content"
  >
    <span
      class="ouiButton__text"
    />
  </span>
</a>
`;
